2016-11-25	"I shot an arrow in to the air, and it stuck."  (8)

		configure ,
		GNUmakefile ,
		bin/innocent-pear-front-end.tcc :
		- now try to test for and use `-fwritable-strings' clang++
		  option when compiling the doge-??.cc modules

		include/innocent-pear/bbq.h :
		- removed use of optimize(.) attributes

		share/innocent-pear/doge-i.h :
		- removed use of optimize(.) attribute in innocent_pear_DOGE
		  _MEMSET when under clang++

		LICENSE :
		- reverted to using the GNU LGPL v3

		lolwutconf/ :
		- bumped to c7fa319627

2016-11-21	"I shot an arrow in to the air, and it stuck."  (7)

		include/innocent-pear/omg.h :
		- now does pointer aliasing à la kthxbai.h

2016-11-20	Try to inhibit constant merging for `-Xinnocent-pear -doge'.

		bin/innocent-pear-front-end.tcc :
		- now compiles doge-*.cc routines with -fno-merge-constants
		  and -fno-merge-all-constants, so that constants in these
		  modules do not accidentally end up in scrambled regions

		include/innocent-pear/bbq.h :
		- now defines and uses innocent_pear_always_inline and
		  innocent_pear_always_inline_and(...), and adds attributes
		  for hidden visibility and anti-constant-merging

		include/innocent-pear/lolwut.h ,
		include/innocent-pear/orly.h ,
		include/innocent-pear/rofl.h ,
		include/innocent-pear/tfw.h ,
		include/innocent-pear/unpossible.h ,
		include/innocent-pear/yarly.h ,
		include/innocent-pear/host/lolcat.h ,
		share/innocent-pear/doge-06.cc :
		- now uses innocent_pear_always_inline and
		  innocent_pear_always_inline_and(...)

		include/innocent-pear/omg.h :
		- now uses innocent_pear_always_inline and
		  innocent_pear_always_inline_and(...)
		- omg<...> is now also given hidden visibility (under ELF)
		- omg<...>::omg() now tries to issue `nop's under x86-32,
		  x86-64, and ARM, and also emit dummy instructions for ARM
		  in ARM mode
		- omg<...>::wheee() for ARM now marks ip as clobbered when
		  creating its own veneers
		- reduced confusion layers (again)
