@@ -1,3 +1,10 @@
+2016-11-27	Commit CCCXXXIII.
+
+		include/innocent-pear/omg.h :
+		- for x86-32 and x86-64, may now issue `verr', `verw', `sldt',
+		  `sgdt', and/or `sidt' instructions
+		- redistributed probabilities
+
 2016-11-25	"I shot an arrow in to the air, and it stuck."  (8)
 
 		configure ,
